source/_patterns/00-protons/mixins/_decoration.scss
// Adds decorative dash to headers
// below-center, above-left, above-center, left-right, right
@mixin add-dash(
  $dash-color: secondary,
  $dash-position: "below-center",
  $dash-width: null,
  $top-spacing: 28px,
  $inner-spacing: 0,
  $inner-color: null
) {
  position: relative;

  &::after,
  &::before {
    @include u-bg($dash-color);
    content: "";
    height: 3px;
  }

  @if $dash-position == "below-center" {
    padding-bottom: 0.8em;

    &::after {
      $dash-width: 100% !default;
      width: $dash-width;
      position: absolute;
      bottom: 0;
      left: 50%;
      transform: translateX(-50%);
    }
  } @else if $dash-position == "above-left" {
    padding-top: 0.8em;

    &::after {
      $dash-width: 100% !default;
      width: $dash-width;
      position: absolute;
      top: 0;
      left: 0;
    }
  } @else if $dash-position == "above-center" {
    margin-top: $top-spacing;
    padding-top: 0.8em;
    text-align: center;

    &::before {
      $dash-width: 100% !default;
      width: $dash-width;
      position: absolute;
      top: 0;
      left: 50%;
      transform: translateX(-50%);
    }
  } @else if $dash-position == "left-right" {
    // `left-right` requires a `<span>` to wrap the text
    margin-left: $inner-spacing + 30px;
    margin-right: $inner-spacing + 30px;
    text-align: center;

    &::before {
      $dash-width: 300% !default;
      width: $dash-width;
      position: relative;
      display: block;
      transform: translate(-50%, $top-spacing);
      z-index: 0;
    }

    // box-shadow adds padding around multi-line text
    // see https://css-tricks.com/multi-line-padded-text/
    // Put background gradient under span to hide line
    span {
      position: relative;
      background: linear-gradient(0deg, color($inner-color) 70%, transparent 70%);
      box-shadow: 30px 15px 0 color($inner-color), -30px 15px 0 color($inner-color);
      box-decoration-break: clone;
      z-index: 1;
    }
  } @else if $dash-position == "right" {
    // `right` requires a `<span>` to wrap the text
    margin-right: $inner-spacing + 30px;

    &::before {
      $dash-width: 300% !default;
      width: $dash-width;
      position: relative;
      display: block;
      transform: translate(-50%, $top-spacing);
      z-index: 0;
    }

    // box-shadow adds padding around multi-line text
    // see https://css-tricks.com/multi-line-padded-text/
    // Put background gradient under span to hide line
    span {
      position: relative;
      background: linear-gradient(0deg, color($inner-color) 70%, transparent 70%);
      box-shadow: 30px 15px 0 color($inner-color);
      box-decoration-break: clone;
      z-index: 1;
    }
  }
}

